--- a/src/test/resources/set1/current.html
+++ b/src/test/resources/set1/current.html
@@ -1,6 +1,7 @@
 <p>Πρώτη σειρά</p>
+<p>Δεύτερη σειρά</p>
 <p>Δευτερη σειρά</p>
-<p>Δευτερη σειρά</p>
+<p>Τέταρτη σειρά</p>
 <p>Τρίτη Σειρά</p>
-<p>Τέταρτ σειρά</p>
+
 
