--- a/src/test/resources/set1/result.html
+++ b/src/test/resources/set1/result.html
@@ -5,10 +5,12 @@
 </head>
 <body><p>Πρώτη σειρά</p>
 
-<p>Δευτερη σειρά</p>
+<p>Δεύτερη σειρά</p>
 
 <div style="background:#e6ffe6;"><p>Δευτερη σειρά</p></div>
+<div style="background:#e6ffe6;"><p>Τέταρτη σειρά</p></div>
 <p>Τρίτη Σειρά</p>
 
-<p>Τέταρτ σειρά</p></body>
+<div style="background:#ffe6e6;"><p>Τέταρτη σειρά</p></div>
+</body>
 </html>
