--- a/src/test/resources/set1/current.html
+++ b/src/test/resources/set1/current.html
@@ -1,6 +1,8 @@
-<p>Πρώτη σειρά</p>
+<div>
+    <p>Πρώτη σε22ιρά</p>
+</div>
 <p>Δεύτερη σειρά</p>
-<p>Δευτερη σειρά</p>
+<p>Δεύτερη σειρά</p>
 <p>Τέταρτη σειρά</p>
 <p>Τρίτη Σειρά</p>
 
