--- a/src/test/resources/set1/result.html
+++ b/src/test/resources/set1/result.html
@@ -1,16 +1,34 @@
-<?xml version="1.0" encoding="utf-8"?><!DOCTYPE html PUBLIC>
 <html>
 <head>
     <meta charset="utf-8"/>
 </head>
-<body><p>Πρώτη σειρά</p>
+<body>
+<div style="background:#e6ffe6;">
+    <ins>
+        <div diffid="00000_div">
+            <div style="background:#e6ffe6;">
+                <ins><p diffid="00000_p">Πρώτη σε22ιρά</p></ins>
+            </div>
+        </div>
+    </ins>
+</div>
+<div style="background:#ffe6e6;">
+    <del><p diffid="00000_p">Πρώτη σειρά</p></del>
+</div>
+<p diffid="00001_p">Δεύτερη σειρά</p>
 
-<p>Δεύτερη σειρά</p>
+<p diffid="00002_p">
+    <del style="background:#ffe6e6;">Τρίτ</del>
+    <ins style="background:#e6ffe6;">Δεύτερ</ins>
+    η
+    <del style="background:#ffe6e6;">Σ</del>
+    <ins style="background:#e6ffe6;">σ</ins>
+    ειρά
+</p>
+<p diffid="00003_p">Τέταρτη σειρά</p>
 
-<div style="background:#e6ffe6;"><p>Δευτερη σειρά</p></div>
-<div style="background:#e6ffe6;"><p>Τέταρτη σειρά</p></div>
-<p>Τρίτη Σειρά</p>
-
-<div style="background:#ffe6e6;"><p>Τέταρτη σειρά</p></div>
+<div style="background:#e6ffe6;">
+    <ins><p diffid="00004_p">Τρίτη Σειρά</p></ins>
+</div>
 </body>
 </html>
