--- a/src/test/resources/set1/current.html
+++ b/src/test/resources/set1/current.html
@@ -1,9 +1,7 @@
-<div>
-    <p>Πρώτη σε22ιρά</p>
-</div>
-<p>Δεύτερη σειρά</p>
-<p>Δεύτερη σειρά</p>
-<p>Τέταρτη σειρά</p>
-<p>Τρίτη Σειρά</p>
+<p>Lorem ipsum dolor sit amet, <span style="background-color:#ffff00">Curabitur ligul.</span>
+    Maecenas vestibulum.</p>
 
-
+<p>
+    Vestibulum <strong>tempus</strong>.<em> Curabitur</em>sed condimentum.</p>
+<p>
+    Vestibulum nec dui ante. Aenean eu ultricies ligula</p>
