--- a/src/test/resources/set1/previous.html
+++ b/src/test/resources/set1/previous.html
@@ -1,4 +1,7 @@
-<p>Πρώτη σειρά</p>
-<p>Δεύτερη σειρά</p>
-<p>Τρίτη Σειρά</p>
-<p>Τέταρτη σειρά</p>
+<p>Lorem ipsum dolor sit amet, <span style="background-color:#ffff00">Curabitur ligul.</span>
+    Maecenas vestibulum.</p>
+
+<p>
+    Vestibulum <strong>tempus</strong>.<em> Curabitur</em>sed condimentum.</p>
+<p>
+    Vestibulum nec dui ante. Aenean eu ultricies ligula</p>
