--- a/src/test/resources/set1/result.html
+++ b/src/test/resources/set1/result.html
@@ -3,32 +3,13 @@
     <meta charset="utf-8"/>
 </head>
 <body>
-<div style="background:#e6ffe6;">
-    <ins>
-        <div diffid="00000_div">
-            <div style="background:#e6ffe6;">
-                <ins><p diffid="00000_p">Πρώτη σε22ιρά</p></ins>
-            </div>
-        </div>
-    </ins>
-</div>
-<div style="background:#ffe6e6;">
-    <del><p diffid="00000_p">Πρώτη σειρά</p></del>
-</div>
-<p diffid="00001_p">Δεύτερη σειρά</p>
-
-<p diffid="00002_p">
-    <del style="background:#ffe6e6;">Τρίτ</del>
-    <ins style="background:#e6ffe6;">Δεύτερ</ins>
-    η
-    <del style="background:#ffe6e6;">Σ</del>
-    <ins style="background:#e6ffe6;">σ</ins>
-    ειρά
+<p diffid="00000_p">Lorem ipsum dolor sit amet, Maecenas vestibulum.<span diffid="00000_span"
+                                                                          style="background-color:#ffff00">Curabitur ligul.</span>
 </p>
-<p diffid="00003_p">Τέταρτη σειρά</p>
 
-<div style="background:#e6ffe6;">
-    <ins><p diffid="00004_p">Τρίτη Σειρά</p></ins>
-</div>
+<p diffid="00001_p">Vestibulum .sed condimentum.<strong diffid="00000_strong">tempus</strong><em diffid="00001_em">Curabitur</em>
+</p>
+
+<p diffid="00002_p">Vestibulum nec dui ante. Aenean eu ultricies ligula</p>
 </body>
 </html>
