working with same document structures

--- a/src/test/resources/set1/result.html
+++ b/src/test/resources/set1/result.html
@@ -3,13 +3,56 @@
     <meta charset="utf-8"/>
 </head>
 <body>
-<p diffid="00000_p">Lorem ipsum dolor sit amet, Maecenas vestibulum.<span diffid="00000_span"
-                                                                          style="background-color:#ffff00">Curabitur ligul.</span>
+<p diffid="00000_p">Lorem ipsum dolor sit amet, <span diffid="00001_span" style="background-color:#ffff00">Curabitur ligul.</span>
+    Maecenas vestibulum.</p>
+<del style="background:#ffe6e6;">
+    <del></del>
+</del>
+<p diffid="00002_p">
+    <ins style="background:#e6ffe6;">
+        <ins>New p</ins>
+    </ins>
 </p>
-
-<p diffid="00001_p">Vestibulum .sed condimentum.<strong diffid="00000_strong">tempus</strong><em diffid="00001_em">Curabitur</em>
+<del style="background:#ffe6e6;">
+    <del></del>
+</del>
+<p diffid="00004_p"> Vestibulum
+    <ins style="background:#e6ffe6;">nec dui ante. Aenean eu ultricies ligula</ins>
+    <del style="background:#ffe6e6;">
+        <del><strong diffid="00001_strong">
+            <del style="background:#ffe6e6;">
+                <del>tempus</del>
+            </del>
+        </strong></del>
+    </del>
+    <del style="background:#ffe6e6;">
+        <del>.</del>
+    </del>
+    <del style="background:#ffe6e6;">
+        <del><em diffid="00003_em">
+            <del style="background:#ffe6e6;">
+                <del> Curabitur</del>
+            </del>
+        </em></del>
+    </del>
+    <del style="background:#ffe6e6;">
+        <del>sed condimentum.</del>
+    </del>
 </p>
-
-<p diffid="00002_p">Vestibulum nec dui ante. Aenean eu ultricies ligula</p>
+<del style="background:#ffe6e6;">
+    <del></del>
+</del>
+<del style="background:#ffe6e6;">
+    <del>
+        <p diffid="00006_p">
+            <del style="background:#ffe6e6;">
+                <del> Vestibulum nec dui ante. Aenean eu ultricies ligula</del>
+            </del>
+        </p>
+    </del>
+</del>
+<del style="background:#ffe6e6;">
+    <del></del>
+</del>
 </body>
 </html>
